Bug 1780437 - Fix misaligned checkbox on about:glean. r=chutten
Differential Revision: https://phabricator.services.mozilla.com/D226429

--- a/toolkit/content/aboutGlean.css
+++ b/toolkit/content/aboutGlean.css
@@ -18,3 +18,8 @@
   transform: translateX(-50%);
   bottom: var(--space-medium);
 }
+
+#log-pings {
+  vertical-align: text-top;
+  margin-inline-end: 0;
+}
